# readwise

./: .gitignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  FIXES.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  SPEC.md  pyproject.toml
.claude/skills/commit-message/: SKILL.md
.claude/skills/pr-description/: SKILL.md
readwise/: main.py
readwise/config/: settings.py
readwise/core/: calibre_scanner.py  chunk_generator.py  session_manager.py  streak_engine.py
readwise/db/: database.py
readwise/db/migrations/: 001_initial.sql  002_highlights.sql  003_book_metadata.sql  004_last_position.sql  005_scroll_position.sql
readwise/db/models/: book.py  reading_plan.py  session.py  stats.py
readwise/readers/: base_reader.py  epub_reader.py
readwise/ui/: main_window.py
readwise/ui/dialogs/: book_detail_dialog.py  book_setup_dialog.py
readwise/ui/views/: library_view.py  reader_view.py  settings_view.py  stats_view.py
readwise/ui/widgets/: book_card.py  reader_panel.py  series_card.py
tests/: conftest.py  test_chunk_generator.py  test_streak_engine.py
