[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "readwise"
version = "0.1.0"
description = "Focus-friendly reading tracker with chunking, streaks, and Obsidian integration"
requires-python = ">=3.11"
dependencies = [
    "PySide6==6.8.2",
    "ebooklib>=0.18",
    "pypdf>=4.0.0",
    "lxml>=5.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
]

[project.scripts]
readwise = "readwise.main:main"

[tool.hatch.build.targets.wheel]
packages = ["readwise"]

[tool.pytest.ini_options]
testpaths = ["tests"]
